sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: value =! is not a member of Int
  while(i=!getNombreValeurs())
         ^AlgGnomeSort:10: error: reassignment to val
      i=i+1
       ^AlgGnomeSort:19: error: reassignment to val
        i=i+1
         ^AlgGnomeSort:24: error: reassignment to val
        i=i-1
         ^