sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort()
{
  def i:Int = 0
  
  while(i=!getNombreValeurs())
  {
    if(plusPetit(i,i+1))
    {
      i=i+1
    }
    
    else
    {
      echange(i,i+1)
      
      if(i==0)
      {
        i=i+1
      }
      
      else
      {
        i=i-1
      }
    }
  } 
}